# fastapi-dynamodb-pydantic

./: README.md
api/: .flake8  Dockerfile  pyproject.toml
api/api/: main.py
api/api/databases/: setting.py
api/api/databases/tables/: lunch_blog.py
api/api/models/: post.py  user.py
api/api/models/lib/: functions.py
api/api/routers/: post.py
api/api/utils/: cognito.py  error.py  logger.py
docs/api/: api-v1.0.html  api-v1.0.yaml
terraform/: .gitignore  api-gateway.tf  cognito.tf  dynamodb.tf  ecr.tf  lambda.tf  provider.tf
