[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Nhat Phan <84700041+meiceee@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
httpx = "^0.25.2"
mangum = "^0.17.0"
aws-lambda-powertools = "^2.30.0"
pydantic = "^2.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.12.0"
isort = "^5.13.2"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120